# joplin-parse

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.rst  pyproject.toml
.github/workflows/: main.yml
joplin-parse/: main.py
joplin_parse/: main.py  utils.py
notebooks/: folders.txt  nested_dicts.ipynb  notes.txt
