[tool.poetry]
name = "joplin-parse"
version = "0.1.0"
description = "Turn Joplin database into public wiki"
authors = ["Rasul Kireev <me@rasulkireev.com>"]

[tool.poetry.dependencies]
python = "^3.7"
joplin-api = "^1.5.6"
asyncio = "^3.4.3"
wrapt = "^1.12.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"
radon = "^4.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
